# quiz_maker

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  quiz_database.db  quiz_database.db.backup  test_db.ipynb
backend/: Dockerfile  api.py  custom_components.py  db.py  pipelines.py  quiz_generation_prompt.py  sqlite_dal.py  test_db_connection.py  utils.py
frontend/quiz_app/: Dockerfile  README.md  pubspec.yaml
frontend/quiz_app/lib/: firebase_options.dart  main.dart
frontend/quiz_app/lib/models/: question.dart
frontend/quiz_app/lib/screens/: analytics_screen.dart  available_quizzes_screen.dart  home_screen.dart  pdf_quiz_screen.dart  quiz_history_screen.dart  url_quiz_screen.dart
frontend/quiz_app/lib/screens/admin/: admin_panel_screen.dart
frontend/quiz_app/lib/screens/auth/: auth_screen.dart
frontend/quiz_app/lib/screens/quiz/: quiz_screen.dart
frontend/quiz_app/lib/services/: quiz_service.dart
frontend/quiz_app/test/integration/: quiz_flow_test.dart
frontend/quiz_app/test/mocks/: mock_quiz_service.dart
frontend/quiz_app/test/unit/: question_test.dart
frontend/quiz_app/test/widget/: auth_screen_test.dart
frontend/quiz_app/web/: index.html
